--- a/ShmaxPPS_rusalov/res/values/strings.xml
+++ b/ShmaxPPS_rusalov/res/values/strings.xml
@@ -22,7 +22,28 @@
     <string name="deleteUser">Удалить пользователя</string>
     <string name="areYouSureToDeleteUser">Вы действительно хотите удалить запись пользователя</string>
     <string name="testNumber">Тестирование №</string>
+    <string name="chooseTimeTest">Выберите дату пройденного теста</string>
+    <string name="tableInfo">Таблица с результатами</string>
+    <string name="scale">Шкала</string>
+    <string name="scores">Баллы</string>
+    <string name="level">Уровень</string>
+    <string name="info">Описание</string>
     
+    <string name="energy">Предметная эргичность</string>
+    <string name="socialEnergy">Социальная эргичность</string>
+    <string name="plasticity">Пластичность</string>
+    <string name="socialPlasticity">Социальная пластичность</string>
+    <string name="pace">Темп и Скорость</string>
+    <string name="socialPace">Социальный темп</string>
+    <string name="emotionality">Эмоциональность</string>
+    <string name="socialEmotionality">Социальная эмоциональность</string>
+    <string name="k">Контрольная шкала</string>
+    <string name="high">Высокий</string>
+    <string name="medium">Средний</string>
+    <string name="low">Низкий</string>
+    <string name="areYouSureToLeaveTest">Вы уверены что хотите покинуть тест</string>
+    <string name="yourAnswersIsFailed">Ваши ответы свидетельствуют о  недостоверной самооценке своего поведения, возможно, вами руководствует желание выглядеть лучше, чем есть на самом деле</string>
+    <string name="returnTest">Заново</string>
     <string name="toTestAndResult">Перейти к тестированию и просмотру результатов?</string>
     
     <string name="yes">Да</string>
@@ -34,6 +55,7 @@
     <string name="startButton">Начать</string>
     <string name="mainMenu">В главное меню</string>
     <string name="resultsTitle"><b>Ваш результат</b></string>
+    <string name="toMoreInfo">Перейти к детальной таблице результатов</string>
     
     <string name="instruction"><b>Инструкция</b>\n
                Вам предлагается ответить на 105 вопросов. Вопросы направлены на выяснение вашего обычного способа поведения. Постарайтесь представить типичные ситуации и дайте первый "естественный" ответ, который придет Вам в голову. Отвечайте быстро и точно. Помните, нет "хороших" или "плохих" ответов.</string>
@@ -155,7 +177,7 @@
      <string name="choleric"> Холерик</string>
      <string name="phlegmatic"> Флегматик</string>
      <string name="melancholiac"> Меланхолик</string>
-     <string name="mixedCharacter"> Человек со смешанным типом темперамента</string>
+     <string name="mixedCharacter"> Смешанный тип</string>
      
  	<string name="energyHigh"><b>Предметная эргичность</b>: высокая потребность в освоении предметного мира, жажду деятельности, стремление к напряженному умственному и физическому труду, легкость умственного пробуждения</string>
  	<string name="energyLow"><b>Предметная эргичность</b>: пассивность, низкий уровень тонуса и активации, нежелание умственного напряжения низкую вовлеченность в процесс деятельности</string>
@@ -184,5 +206,17 @@
  	<string name="kHigh"><b>«К» - контрольная шкала</b>: неадекватная оценка своего поведения, желание выглядеть лучше, чем есть на самом деле</string>
  	<string name="kLow"><b>«К» - контрольная шкала</b>: адекватное восприятие своего поведения</string>
  	
+	<string name="sanguineInfo"><b>Сангвиник</b> быстро приспосабливается к новым условиям, быстро сходится с людьми, общителен. Чувства легко возникают и сменяются, эмоциональные переживания, как правило, неглубоки. Мимика богатая, подвижная, выразительная. Несколько непоседлив, нуждается в новых впечатлениях, недостаточно регулирует свои импульсы, не умеет строго придерживаться выработанного распорядка, жизни, системы в работе. В связи с этим не может успешно выполнять дело, требующее равной затраты сил, длительного и методичного напряжения, усидчивости, устойчивости внимания, терпения. При отсутствии серьезных целей, глубоких мыслей, творческой деятельности вырабатываются поверхностность и непостоянство.</string>
+ 	<string name="cholericInfo"><b>Холерик</b> отличается повышенной возбудимостью, действия прерывисты. Ему свойственны резкость и стремительность движений, сила, импульсивность, яркая выраженность эмоциональных переживаний. Вследствие неуравновешенности, увлекшись делом, склонен действовать изо всех сил, истощаться больше, чем следует. Имея общественные интересы, темперамент проявляет в инициативности, энергичности, принципиальности. При отсутствии духовной жизни холерический темперамент часто проявляется в раздражительности, эффективности, несдержанности, вспыльчивости, неспособности к самоконтролю при эмоциональных обстоятельствах.</string>
+	<string name="phlegmaticInfo"><b>Флегматик</b> характеризуется сравнительно низким уровнем активности поведения, новые формы которого вырабатываются медленно, но являются стойкими. Обладает медлительностью и спокойствием в действиях, мимике и речи, ровностью, постоянством, глубиной чувств и настроений. Настойчивый и упорный «труженик жизни», он редко выходит из себя, не склонен к аффектам, рассчитав свои силы, доводит дело до конца, ровен в отношениях, в меру общителен, не любит попусту болтать. Экономит силы, попусту их не тратит. В зависимости от условий в одних случаях флегматик может характеризоваться «положительными» чертами - выдержкой, глубиной мыслей, постоянством, основательностью и т. д., в других - вялостью, безучастностью к окружающему, ленью и безволием, бедностью и слабостью эмоций, склонностью к выполнению одних лишь привычных действий.</string>
+	<string name="melancholiacInfo"><b>Меланхолик.</b> У него реакция часто не соответствует силе раздражителя, присутствует глубина и устойчивость чувств при слабом их выражении. Ему трудно долго на чем-то сосредоточиться. Сильные воздействия часто вызывают у меланхолика продолжительную тормозную реакцию (опускаются руки). Ему свойственны сдержанность и приглушенность моторики и речи, застенчивость, робость, нерешительность. В нормальных условиях меланхолик - человек глубокий, содержательный, может быть хорошим тружеником, успешно справляться с жизненными задачами. При неблагоприятных условиях может превратиться в замкнутого, боязливого, тревожного, ранимого человека, склонного к тяжелым внутренним переживаниям таких жизненных обстоятельств, которые вовсе этого не заслуживают.</string>
+	<string name="mixedCharacterInfo"><b>Смешанный тип.</b> Незначительная потребность в достижениях, отсутствие стремления достижения преобладание избегания трудностей в ситуации неудач. Нежелание преодоления возникающих препятствий. Незначительная потребность в социальных контактах, уход от социально-активных форм поведения, замкнутость, социальная пассивность. Легкость переключения с одного вида деятельности на другой, быстрый переход с одних форм мышления на другие в процессе взаимодействия с предметной средой, стремление к разнообразию форм предметной деятельности.  Трудность в подборе форм социального взаимодействия, низкий уровень готовности к вступлению в социальные контакты, стремление к поддержанию монотонных контактов. Замедленность действий, низкая скорость моторно-двигательных операций.  Речедвигательная быстрота, быстрота говорения, высокие скорости и возможности речедвигательного аппарата. Незначительное эмоциональное реагирование при неудачах, нечувствительность к неуспеху дела, спокойствие, уверенность в себе. Высокая эмоциональность в коммуникативной сфере, высокая чувствительность к неудачам в общении. Адекватное восприятие своего поведения.</string>
+
+
+
+
+
+
+
 
 </resources>
