add charts of test, add profile_user

--- a/antonagat_eysenck/res/values/strings.xml
+++ b/antonagat_eysenck/res/values/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">Test Eysenck</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
@@ -48,5 +47,47 @@
     <string name="ShowResult">посмотреть результаты</string>
     <string name="NewTest">новый тест</string>
     <string name="date">"дата "</string>
-
+    <string-array name="manualType">
+        <item >   10-14 - среднее значение 
+            <pre>  9 и меньше - интроверт </pre> 
+			<pre>  5 и меньше - глубокий интроверт </pre> n\
+<pre>Типичный интроверт — это спокойный, застенчивый, интроективный человек, склонный к самоанализу.
+Сдержан и отдален от всех, кроме близких друзей. Планирует и обдумывает свои действия заранее,
+не доверяет внезапным побуждениям серьезно относится к принятию решений, любит во всем порядок.
+Контролирует свои чувства, его нелегко вывести из себя. Обладает пессимистичностью, высоко ценит нравственные нормы.</pre>
+        </item>
+        <item > <pre>  19 и больше - яркий экстраверт</pre>
+            <pre>  15-18 - экстраверт</pre>
+            <pre>  10-14 - среднее значение</pre>
+<pre> У типичного экстраверта отмечаются следующие черты характера: общительность и обращенность индивида вовне, 
+широкий круг знакомств, необходимость в контактах. Он действует под влиянием момента, ипульсивен, вспыльчив,
+беззаботен, оптимистичен, добродушен, весел. Предпочитает движение и действие, имеет тенденцию к агрессивности.
+Чувства и эмоции не имеют строгого контроля, склонен к рискованным поступкам. На него не всегда можно положиться.</pre>
+        </item>
+        <item >Эмоциональная устойчивость — черта, выражающая сохранение организованного поведения, ситуативной 
+            целенаправленности в обычных и стрессовых ситуациях. Характеризуется зрелостью, отличной адаптацией, 
+            отсутствием большой напряженности, беспокойства, а также склонностью к лидерству, общительности. </item>
+        <item >Нейротизм выражается в чрезвычайной нервности, неустойчивости, плохой адаптации, склонности к быстрой смене 
+            настроений (лабильности), чувстве виновности и беспокойства, озабоченности, депрессивных реакциях, рассеянности внимания,
+             неустойчивости в стрессовых ситуациях. Нейротизму соответствует эмоциональность, импульсивность; неровность в контактах 
+             с людьми, изменчивость интересов, неуверенность в себе, выраженная чувствительность, впечатлительность, склонность 
+             к раздражительности. Нейротическая личность характеризуется неадекватно сильными реакциями по отношению к вызывающим их 
+             стимулам. У лиц с высокими показателями по шкале нейротизма в неблагоприятных стрессовых ситуациях может развиться невроз.</item>
+    <item>«Чистый» сангвиник быстро приспосабливается к новым условиям, быстро сходится с людьми, общителен. Чувства легко возникают и сменяются, эмоциональные переживания, как правило, неглубоки. Мимика богатая, подвижная, выразительная. Несколько непоседлив, нуждается в новых впечатлениях, недостаточно регулирует свои импульсы, не умеет строго придерживаться выработанного распорядка, жизни, системы в работе. В связи с этим не может успешно выполнять дело, требующее равной затраты сил, длительного и методичного напряжения, усидчивости, устойчивости внимания, терпения. При отсутствии серьезных целей, глубоких мыслей, творческой деятельности вырабатываются поверхностность и непостоянство.</item>
+    <item >Холерик отличается повышенной возбудимостью, действия прерывисты. Ему свойственны резкость и стремительность движений, сила, импульсивность, яркая выраженность эмоциональных переживаний. Вследствие неуравновешенности, увлекшись делом, склонен действовать изо всех сил, истощаться больше, чем следует. Имея общественные интересы, темперамент проявляет в инициативности, энергичности, принципиальности. При отсутствии духовной жизни холерический темперамент часто проявляется в раздражительности, эффективности, несдержанности, вспыльчивости, неспособности к самоконтролю при эмоциональных обстоятельствах.</item>
+    <item>Флегматик характеризуется сравнительно низким уровнем активности поведения, новые формы которого вырабатываются медленно, но являются стойкими. Обладает медлительностью и спокойствием в действиях, мимике и речи, ровностью, постоянством, глубиной чувств и настроений. Настойчивый и упорный «труженик жизни», он редко выходит из себя, не склонен к аффектам, рассчитав свои силы, доводит дело до конца, ровен в отношениях, в меру общителен, не любит попусту болтать. Экономит силы, попусту их не тратит. В зависимости от условий в одних случаях флегматик может характеризоваться «положительными» чертами - выдержкой, глубиной мыслей, постоянством, основательностью и т. д., в других - вялостью, безучастностью к окружающему, ленью и безволием, бедностью и слабостью эмоций, склонностью к выполнению одних лишь привычных действий.</item>
+   	<item>Меланхолик. У него реакция часто не соответствует силе раздражителя, присутствует глубина и устойчивость чувств при слабом их выражении. Ему трудно долго на чем-то сосредоточиться. Сильные воздействия часто вызывают у меланхолика продолжительную тормозную реакцию (опускаются руки). Ему свойственны сдержанность и приглушенность моторики и речи, застенчивость, робость, нерешительность. В нормальных условиях меланхолик - человек глубокий, содержательный, может быть хорошим тружеником, успешно справляться с жизненными задачами. При неблагоприятных условиях может превратиться в замкнутого, боязливого, тревожного, ранимого человека, склонного к тяжелым внутренним переживаниям таких жизненных обстоятельств, которые вовсе этого не заслуживают.</item>
+    </string-array>
+    <string-array name="nameType">
+        <item >интроверт</item>
+        <item >экстраверт</item>
+        <item >стабильный</item>
+        <item >нестабильный</item>   
+        <item>Сангвиник</item>  
+        <item>Холерик</item>
+        <item>Флегматик</item>
+        <item>Меланхолик</item>   
+    </string-array>
+    
+      
 </resources>
