Chart is clickable

--- a/ShmaxPPS_rusalov/res/values/strings.xml
+++ b/ShmaxPPS_rusalov/res/values/strings.xml
@@ -55,6 +55,7 @@
     <string name="startButton">Начать</string>
     <string name="mainMenu">В главное меню</string>
     <string name="resultsTitle"><b>Ваш результат</b></string>
+    <string name="detailCharacter"><b>Детализация шкалы:</b></string>
     <string name="toMoreInfo">Перейти к детальной таблице результатов</string>
     
     <string name="instruction"><b>Инструкция</b>\n
@@ -179,32 +180,32 @@
      <string name="melancholiac"> Меланхолик</string>
      <string name="mixedCharacter"> Смешанный тип</string>
      
- 	<string name="energyHigh"><b>Предметная эргичность</b>: высокая потребность в освоении предметного мира, жажду деятельности, стремление к напряженному умственному и физическому труду, легкость умственного пробуждения</string>
- 	<string name="energyLow"><b>Предметная эргичность</b>: пассивность, низкий уровень тонуса и активации, нежелание умственного напряжения низкую вовлеченность в процесс деятельности</string>
+ 	<string name="energyHigh">Высокие значения - Стремление к совершенствованию, высокая мотивация достижения высоких результатов, амбициозность.</string>
+ 	<string name="energyLow">Низкие значения - незначительная потребность в достижениях, отсутствие стремления достижения преобладание избегания трудностей в ситуации неудач. Нежелание преодоления возникающих препятствий. </string>
  	
- 	<string name="socialEnergyHigh"><b>Социальная эргичность</b>: коммуникативная эргичность, потребность в социальном контакте, жажда освоения социальных форм деятельности, стремление к лидерству, общительность, стремление к занятию высокого ранга, освоение мира через коммуникацию</string>
- 	<string name="socialEnergyLow"><b>Социальная эргичность</b>: незначительная потребность в социальных контактах, уход от социально-активных форм поведения, замкнутость, социальная пассивность</string>
+ 	<string name="socialEnergyHigh">Высокие значения - коммуникативная эргичность, потребность в социальном контакте, жажда освоения социальных форм деятельности, стремление к лидерству, общительность, стремление к занятию высокого ранга, освоение мира через коммуникацию</string>
+ 	<string name="socialEnergyLow">Низкие значения - незначительная потребность в социальных контактах, уход от социально-активных форм поведения, замкнутость, социальная пассивность</string>
  	
- 	<string name="plasticityHigh"><b>Пластичность</b>: легкость переключения с одного вида деятельности на другой, быстрый переход с одних форм мышления на другие в процессе взаимодействия с предметной средой, стремление к разнообразию форм предметной деятельности</string>
- 	<string name="plasticityLow"><b>Пластичность</b>: склонность к монотонной работе, боязнь и избегание разнообразных форм поведения, вязкость, консервативные формы деятельности</string>
+ 	<string name="plasticityHigh">Высокие значения - легкость переключения с одного вида деятельности на другой, быстрый переход с одних форм мышления на другие в процессе взаимодействия с предметной средой, стремление к разнообразию форм предметной деятельности</string>
+ 	<string name="plasticityLow">Низкие значения - склонность к монотонной работе, боязнь и избегание разнообразных форм поведения, вязкость, консервативные формы деятельности</string>
  	
- 	<string name="socialPlasticityHigh"><b>Социальная пластичность</b>: широкий набор коммуникативных программ, автоматическое включение в социальные связи, легкость вступления в социальные контакты, легкость переключения в процессе общения, наличие большого количества коммуникативных заготовок, коммуникативная импульсивность</string>
- 	<string name="socialPlasticityLow"><b>Социальная пластичность</b>: трудность в подборе форм социального взаимодействия, низкий уровень готовности к вступлению в социальные контакты, стремление к поддержанию монотонных контактов</string>
+ 	<string name="socialPlasticityHigh">Высокие значения - широкий набор коммуникативных программ, автоматическое включение в социальные связи, легкость вступления в социальные контакты, легкость переключения в процессе общения, наличие большого количества коммуникативных заготовок, коммуникативная импульсивность</string>
+ 	<string name="socialPlasticityLow">Низкие значения - трудность в подборе форм социального взаимодействия, низкий уровень готовности к вступлению в социальные контакты, стремление к поддержанию монотонных контактов</string>
  	
- 	<string name="paceHigh"><b>Темп или Скорость</b>: высокий темп поведения, высокая скорость выполнения операций при осуществлении предметной деятельности, моторно-двигательная быстрота, высокая психическая скорость при выполнении конкретных заданий</string>
- 	<string name="paceLow"><b>Темп или Скорость</b>: замедленность действий, низкая скорость моторно-двигательных операций</string>
+ 	<string name="paceHigh">Высокие значения - высокий темп поведения, высокая скорость выполнения операций при осуществлении предметной деятельности, моторно-двигательная быстрота, высокая психическая скорость при выполнении конкретных заданий</string>
+ 	<string name="paceLow">Низкие значения - замедленность действий, низкая скорость моторно-двигательных операций</string>
  	
- 	<string name="socialPaceHigh"><b>Социальный темп</b>: речедвигательная быстрота, быстрота говорения, высокие скорости и возможности речедвигательного аппарата</string>
- 	<string name="socialPaceLow"><b>Социальный темп</b>: слабо развита речедвигательная система, речевая медлительность, медленная вербализация</string>
+ 	<string name="socialPaceHigh">Высокие значения - речедвигательная быстрота, быстрота говорения, высокие скорости и возможности речедвигательного аппарата</string>
+ 	<string name="socialPaceLow">Низкие значения - слабо развита речедвигательная система, речевая медлительность, медленная вербализация</string>
  	
- 	<string name="emotionalityHigh"><b>Эмоциональность</b>: высокая чувствительность к расхождению между задуманным и ожидаемым, планируемым и результатами реального действия, ощущения неуверенности, тревоги, неполноценности, высокое беспокойство по поводу работы, чувствительность к неудачам, к несовпадению между задуманным, ожидаемым, планируемым и результатами реального действия</string>
- 	<string name="emotionalityLow"><b>Эмоциональность</b>: незначительное эмоциональное реагирование при неудачах, нечувствительность к неуспеху дела, спокойствие, уверенность в себе</string>
+ 	<string name="emotionalityHigh">Высокие значения - высокая чувствительность к расхождению между задуманным и ожидаемым, планируемым и результатами реального действия, ощущения неуверенности, тревоги, неполноценности, высокое беспокойство по поводу работы, чувствительность к неудачам, к несовпадению между задуманным, ожидаемым, планируемым и результатами реального действия</string>
+ 	<string name="emotionalityLow">Низкие значения - незначительное эмоциональное реагирование при неудачах, нечувствительность к неуспеху дела, спокойствие, уверенность в себе</string>
  	
- 	<string name="socialEmotionalityHigh"><b>Социальная эмоциональность</b>: высокая эмоциональность в коммуникативной сфере, высокая чувствительность к неудачам в общении</string>
- 	<string name="socialEmotionalityLow"><b>Социальная эмоциональность</b>: низкая эмоциональность в коммуникативной сфере, нечувствительность к оценкам товарищей, отсутствие чувствительности к неудачам в общении, уверенность в себе и ситуациях общения</string>
+ 	<string name="socialEmotionalityHigh">Высокие значения - высокая эмоциональность в коммуникативной сфере, высокая чувствительность к неудачам в общении</string>
+ 	<string name="socialEmotionalityLow">Низкие значения - низкая эмоциональность в коммуникативной сфере, нечувствительность к оценкам товарищей, отсутствие чувствительности к неудачам в общении, уверенность в себе и ситуациях общения</string>
  	
- 	<string name="kHigh"><b>«К» - контрольная шкала</b>: неадекватная оценка своего поведения, желание выглядеть лучше, чем есть на самом деле</string>
- 	<string name="kLow"><b>«К» - контрольная шкала</b>: адекватное восприятие своего поведения</string>
+ 	<string name="kHigh">Высокие значения - неадекватная оценка своего поведения, желание выглядеть лучше, чем есть на самом деле</string>
+ 	<string name="kLow">Низкие значения - адекватное восприятие своего поведения</string>
  	
 	<string name="sanguineInfo"><b>Сангвиник</b> быстро приспосабливается к новым условиям, быстро сходится с людьми, общителен. Чувства легко возникают и сменяются, эмоциональные переживания, как правило, неглубоки. Мимика богатая, подвижная, выразительная. Несколько непоседлив, нуждается в новых впечатлениях, недостаточно регулирует свои импульсы, не умеет строго придерживаться выработанного распорядка, жизни, системы в работе. В связи с этим не может успешно выполнять дело, требующее равной затраты сил, длительного и методичного напряжения, усидчивости, устойчивости внимания, терпения. При отсутствии серьезных целей, глубоких мыслей, творческой деятельности вырабатываются поверхностность и непостоянство.</string>
  	<string name="cholericInfo"><b>Холерик</b> отличается повышенной возбудимостью, действия прерывисты. Ему свойственны резкость и стремительность движений, сила, импульсивность, яркая выраженность эмоциональных переживаний. Вследствие неуравновешенности, увлекшись делом, склонен действовать изо всех сил, истощаться больше, чем следует. Имея общественные интересы, темперамент проявляет в инициативности, энергичности, принципиальности. При отсутствии духовной жизни холерический темперамент часто проявляется в раздражительности, эффективности, несдержанности, вспыльчивости, неспособности к самоконтролю при эмоциональных обстоятельствах.</string>
