--- a/Tim Ziyatdinov/res/values/strings.xml
+++ b/Tim Ziyatdinov/res/values/strings.xml
@@ -31,13 +31,27 @@
     <string name="button_restart">К началу</string>
     <string name="button_about">Описание</string>
     <string name="button_home">На главную</string>
+    <string name="button_more">Еще</string>
+    <string name="results_ok">Вы контролируете ваши проявления враждебности и агрессии.</string>
+    <string name="results_less_part1">Вы излишне подавляете собственные проявления </string>
+    <string name="results_less_part2">. Есть вероятность возникновения внутреннего психологического конфликта.</string>
+    <string name="results_hostility">враждебности</string>
+    <string name="results_agression">агрессии</string>
+    <string name="results_greater_part1">У вас повышен уровень </string>
+    <string name="results_greater_part2">. Есть вероятность демонстрации импульсивного необдуманного поведения.</string>
+    <string name="more_phys_agr">Физическая агрессия — использование физической силы против другого лица.</string>
+    <string name="more_indirect_agr">Косвенная агрессия — агрессия, окольным путем направленная на другое лицо или ни на кого не направленная.</string>
+    <string name="more_irritation">Раздражение — готовность к проявлению негативных чувств при малейшем возбуждении (вспыльчивость, грубость).</string>
+    <string name="more_negativism">Негативизм — оппозиционная манера поведения от пассивного сопротивления до активной борьбы против установившихся обычаев и законов.</string>
+    <string name="more_offence">Обида — зависть и ненависть к окружающим за действительные или вымышленные действия.</string>
+    <string name="more_suspicion">Подозрительность — в диапазоне от недоверия и осторожности по отношению к людям до убеждения в том, что другие люди планируют и приносят вред.</string>
+    <string name="more_verbal_agr">Вербальная агрессия — выражение негативных чувств как через форму (крик, визг), так и через содержание словесных ответов (проклятия, угрозы).</string>
+    <string name="more_guilt">Чувство вины — выражает возможное убеждение субъекта в том, что он является плохим человеком, что поступает плохо, а также ощущаемые им угрызения совести.</string>
     <string name="string_about"> Тест Басс-Дарки разработан А. Басс и А. Дарки в 1957 г. и предназначен для диагностики агрессивных и враждебных реакций. 
 Под агрессивностью понимается свойство личности, характеризующееся наличием деструктивных тенденций, в основном в области субъектно-объектных отношений. 
 Враждебность понимается как реакция, развивающая негативные чувства и негативные оценки людей и событий.
 \n\n
-Читая утверждения, примеряйте, насколько они соответствуют вашему стилю поведения, вашему образу жизни, и отвечайте одним из возможных ответов: «да» и «нет».
-\n\n Нормой агрессивности является величина ее индекса, равная 21 ± 4, а
-враждебности – 6,5-7 ± 3.</string>
+Читая утверждения, примеряйте, насколько они соответствуют вашему стилю поведения, вашему образу жизни, и отвечайте одним из возможных ответов: «да» и «нет».</string>
     <string name="title_activity_about">Тест Басс-Дарки</string>
     <string name="title_activity_start_test">Тест Басс-Дарки</string>
     <string name="string_start_test">Внимательно прочитайте утверждения. Если вы согласны с утверждением, то выберите ответ «да», если нет, выберите ответ «нет».</string>
@@ -48,6 +62,7 @@
     <string name="title_activity_login">Тест Басс-Дарки</string>
     <string name="title_activity_results_menu">Тест Басс-Дарки: результаты</string>
     <string name="title_activity_results_list">Тест Басс-Дарки: результаты</string>
-    <string name="title_activity_results_visual">ResultsVisualActivity</string>
+    <string name="title_activity_results_visual">Тест Басс-Дарки: результаты</string>
+    <string name="title_activity_results_visual_detailed">Тест Басс-Дарки: результаты</string>
 
 </resources>
